# novatel_gps_driver

./: .gitignore  .ros2_build.sh  .travis.yml  Dockerfile  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: docker.yml  dockerhub.yml  main.yml
.sonarqube/: sonar-scanner.properties
docker/: build-image.sh  checkout.bash  checkout.sh  get-image-name.sh  get-repo-name.sh  get-tmp.sh  install.sh  system_release.sh
docs/: pull_request_template.md
hooks/: pre_build
novatel_gps_driver/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
novatel_gps_driver/config/: parameters.yaml  wrapper_parameters.yaml
novatel_gps_driver/include/novatel_gps_driver/: binary_header.h  binary_message.h  nmea_sentence.h  novatel_gps.h  novatel_message_extractor.h  novatel_sentence.h
novatel_gps_driver/include/novatel_gps_driver/nodes/: novatel_gps_node.h
novatel_gps_driver/include/novatel_gps_driver/parsers/: bestpos.h  bestutm.h  bestvel.h  bestxyz.h  clocksteering.h  corrimudata.h  dual_antenna_heading.h  gpgga.h  gpgsa.h  gpgsv.h  gphdt.h  gprmc.h  header.h  heading2.h  imuratecorrimus.h  inscov.h  inspva.h  inspvax.h  insstdev.h  message_parser.h  parse_exception.h  parsing_utils.h  psrdop2.h  range.h  time.h  trackstat.h
novatel_gps_driver/include/novatel_gps_driver/wrapper/: gps_driver_wrapper.h  novatel_gps_nodelet_wrapper_worker.h  worker_config.h
novatel_gps_driver/launch/: novatel.launch  novatel_gps_driver_eth.launch  tester_for_eth.launch  tester_for_eth.launch.py  tester_for_tcp.launch  tester_for_usb.launch  tester_for_usb.launch.py
novatel_gps_driver/src/: novatel_gps.cpp  novatel_message_extractor.cpp
novatel_gps_driver/src/nodelets/: novatel_gps_node.cpp  novatel_gps_nodelet.cpp
novatel_gps_driver/src/nodelets/wrapper/: novatel_gps_nodelet_wrapper.cpp  novatel_gps_nodelet_wrapper_worker.cpp
novatel_gps_driver/src/nodes/: novatel_gps_node.cpp
novatel_gps_driver/src/parsers/: bestpos.cpp  bestutm.cpp  bestvel.cpp  bestxyz.cpp  clocksteering.cpp  corrimudata.cpp  dual_antenna_heading.cpp  gpgga.cpp  gpgsa.cpp  gpgsv.cpp  gphdt.cpp  gprmc.cpp  header.cpp  heading2.cpp  imuratecorrimus.cpp  inscov.cpp  inspva.cpp  inspvax.cpp  insstdev.cpp  parsing_utils.cpp  psrdop2.cpp  range.cpp  time.cpp  trackstat.cpp
novatel_gps_driver/test/: bestpos-bestvel-psrdop2-sync.pcap  corrimudata.pcap  gpgga-gprmc-bestpos.pcap  novatel_gps_tests.cpp  novatel_gps_tests.test  novatel_gtest.cpp  novatel_gtest.test  parser_tests.cpp
novatel_gps_driver/test/wrapper/: gps_nodelet_wrapper_worker_test.cpp
novatel_gps_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
novatel_gps_msgs/msg/: ClockSteering.msg  Gpgga.msg  Gpgsa.msg  Gpgsv.msg  Gphdt.msg  Gprmc.msg  Inscov.msg  Inspva.msg  Inspvax.msg  Insstdev.msg  NovatelCorrectedImuData.msg  NovatelDualAntennaHeading.msg  NovatelExtendedSolutionStatus.msg  NovatelHeading2.msg  NovatelMessageHeader.msg  NovatelPosition.msg  NovatelPsrdop2.msg  NovatelPsrdop2System.msg  NovatelSignalMask.msg  NovatelUtmPosition.msg  NovatelVelocity.msg  NovatelXYZ.msg  Range.msg  RangeInformation.msg  Satellite.msg  Time.msg  Trackstat.msg  TrackstatChannel.msg
novatel_gps_msgs/srv/: NovatelFRESET.srv
novatel_msgs/: CMakeLists.txt  package.xml
novatel_msgs/msg/: Gpgsa.msg  Gpgsv.msg  NovatelReceiverStatus.msg  Trackstat.msg
novatel_oem628/: .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  manifest.xml  nodelet_plugins.xml  package.xml
novatel_oem628/include/novatel_oem628/: novatel_gps.h  novatel_message_parser.h
novatel_oem628/launch/: tester_for_usb.launch
novatel_oem628/msg/: Gprmc.msg  NovatelExtendedSolutionStatus.msg  NovatelSignalMask.msg  NovatelVelocity.msg
novatel_oem628/src/: novatel_gps.cpp  novatel_message_parser.cpp
novatel_oem628/src/nodelets/: novatel_gps_nodelet.cpp
novatel_oem628/src/nodes/: novatel_gps_node.cpp
