<?xml version="1.0" ?>
<package format="3">
  <name>novatel_gps_driver</name>
  <version>4.1.2</version>
  <description>
  Driver for NovAtel receivers
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/swri-robotics/novatel_gps_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>boost</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>gps_msgs</depend>
  <depend>libpcap</depend>
  <depend>nav_msgs</depend>
  <depend>novatel_gps_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>swri_math_util</depend>
  <depend>swri_roscpp</depend>
  <depend>swri_serial_util</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

