<?xml version="1.0"?>
<package format="3">
  <name>novatel_gps_msgs</name>
  <version>4.1.0</version>
  <description>
  Messages for proprietary (non-NMEA) sentences from Novatel GPS receivers.
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/swri-robotics/novatel_gps_driver</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
