<?xml version="1.0"?>
<package format="2">
  <name>novatel_msgs</name>
  <version>0.0.0</version>
  <description>
  The novatel_msgs package contains messages for proprietary (non-NMEA)
  sentences from Novatel GPS receivers.
  </description>
  <maintainer email="evenator@swri.org">Ed Venator</maintainer>
  <license>Southwest Research Institute Proprietary</license>
  <url type="repository">https://ivs-git.dyn.datasys.swri.edu/uss/novatel_gps.git</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
